# QBrainwaveOSC

./: .gitignore  .gitmodules  .gitmodules-unused  CMakeLists.txt  README.md
.github/workflows/: main.yml
buildscripts/: colors.bashrc  common.bashrc  compile.sh  create_appimage.sh  gha.bashrc  install_dependencies.sh  package.sh  setup_environment.sh
buildscripts/aqt/: x86_64-pc-windows-msvc-qt5.sh  x86_64-pc-windows-msvc-qt6.sh
buildscripts/docker/: Dockerfile  job_build.sh  run_workflow.sh
cmake/: CPackConfig.cmake  FindFFTW.cmake  FindFFTW3.cmake  MacOSXBundleInfo.plist.in  deploy.cmake
desktop/: AppIcon.icns  AppIcon.xcf  Info.plist  QBrainwaveOSC.desktop  entitlements.plist
experimental/: QThinkGearListener.h
experimental/BluetoothInterface/: DeviceDiscovery.cpp  DeviceDiscovery.h  RfcommListener.h  ServiceDiscovery.cpp
experimental/QThinkGear/: CMakeLists.txt  QThinkGear.h  QThinkGearDataHandler.cpp  QThinkGearDataHandler.h  TGData.h  TGValues.h
src/: CMakeLists.txt  main.cpp
src/BluetoothInterface/: BluetoothDiscovery.cpp  BluetoothDiscovery.h  BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  DeviceDiscovery.cpp  DeviceDiscovery.h  RfcommListener.cpp  RfcommListener.h  ServiceDiscovery.cpp  ServiceDiscovery.h
src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/GUI/GraphsWidget/: CMakeLists.txt  GraphsWidget.cpp  GraphsWidget.h  GraphsWidget.ui  TGEegWidget.cpp  TGEegWidget.h  TGSimpleWidget.cpp  TGSimpleWidget.h  TGWaveWidget.cpp  TGWaveWidget.h  TGWidget.h
src/GUI/MonitorWidget/: CMakeLists.txt  DebugMonitor.cpp  DebugMonitor.h  MonitorWidget.h  MonitorWidget.ui  SerialPortMonitor.cpp  SerialPortMonitor.h  SerialPortMonitor.ui
src/GUI/SettingsWidget/: CMakeLists.txt  ConnectionWidget.cpp  ConnectionWidget.h  ConnectionWidget.ui  DeviceConfiguration.cpp  DeviceConfiguration.h  DeviceConfiguration.ui  DeviceSettingsWidget.cpp  DeviceSettingsWidget.h  DeviceSettingsWidget.ui  OSCConfiguration.cpp  OSCConfiguration.h  OSCConfiguration.ui  SettingsWidget.cpp  SettingsWidget.h  SettingsWidget.ui
src/GUI/SettingsWidget/DeviceSettings/: CMakeLists.txt  DeviceSettings.h  DeviceTypes.h  DummyDeviceSettings.cpp  DummyDeviceSettings.h  SerialPortSettings.cpp  SerialPortSettings.h
src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/MainWindow/MonitorWidget/: CMakeLists.txt  DebugMonitor.cpp  DebugMonitor.ui  MonitorWidget.cpp  MonitorWidget.ui  RfCommMonitor.cpp  RfCommMonitor.h  RfCommMonitor.ui  SerialPortMonitor.cpp  SerialPortMonitor.h
src/MainWindow/SettingsWidget/: DeviceConfiguration.cpp  DeviceConfiguration.h  SettingsWidget.cpp  SettingsWidget.h  SettingsWidget.ui
src/OSCSender/: CMakeLists.txt  OSCMessage.h  OSCSender.cpp  OSCSender.h
src/QBrainwaveInterface/: CMakeLists.txt  ConnectionStatus.h  DataParser.h  DeviceConnection.h  QBrainwaveInterface.cpp  QBrainwaveInterface.h  QBrainwaveNotifier.cpp  QBrainwaveNotifier.h  QThinkGearDataHandler.h  SerialPortConnection.cpp  SerialPortConnection.h
src/QBrainwaveInterface/DataParsers/: CMakeLists.txt  DataHandler.h  DataParser.h  EegBands.h  parsers.h
src/QBrainwaveInterface/DataParsers/ThinkGearStreamParser/: CMakeLists.txt  ThinkGearCodes.h  ThinkGearDataHandler.cpp  ThinkGearDataHandler.h  ThinkGearPayload.cpp  ThinkGearPayload.h  ThinkGearStreamParser.cpp  ThinkGearStreamParser.h
src/QBrainwaveInterface/DataParsers/TwoByteRawParser/: CMakeLists.txt  TwoByteRawParser.cpp  TwoByteRawParser.h
src/QBrainwaveInterface/WaveAnalyser/: CMakeLists.txt  RawWaveAnalyser.cpp  RawWaveAnalyser.h  SpectrumAnalyser.cpp  SpectrumAnalyser.h
src/QThinkGear/: CMakeLists.txt  EegValues.h  QThinkGear.cpp  QThinkGear.h  QThinkGearDataHandler.cpp  QThinkGearDataHandler.h  TGData.cpp  TGData.h  eegValues.h
src/ThinkGear/: CMakeLists.txt  ThinkGear.cpp  ThinkGear.h
tools/peak-detector/: CMakeLists.txt  PeakDetector.cpp  PeakDetector.h  main.cpp
tools/threshold-detector/: CMakeLists.txt  main.cpp
